--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,17 @@
     <header>
       <nav class="navbar bg-dark" data-bs-theme="dark">
         <a class="navbar-brand" href="#">ТимкаРазвод</a>
+          {% if current_user.is_authenticated %}
+            <a class="navbar-brand" href="/logout">{{ current_user.login }}</a>
+          {% else %}
+          <p>
+              <a class="btn btn-primary" href="/reg">Регистрация</a>
+              <a class="btn btn-success" href="/login">Войти</a>
+          </p>
+          {% endif %}
       </nav>
     </header>
+  <!-- Begin page content -->
   <main role="main" class="container">
     {% block content %}{% endblock %}
   </main>
