--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,14 @@
     <header>
       <nav class="navbar bg-dark" data-bs-theme="dark">
         <a class="navbar-brand" href="#">ТимкаРазвод</a>
+          {% if current_user.is_authenticated %}
+            <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+          {% else %}
+            <p>
+                <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                <a class="btn btn-success" href="/login">Войти</a>
+            </p>
+          {% endif %}
       </nav>
     </header>
   <main role="main" class="container">
