--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,13 @@
   <body>
     <header>
       <nav class="navbar bg-dark" data-bs-theme="dark">
-        <a class="navbar-brand" href="#">ТимкаРазвод</a>
           {% if current_user.is_authenticated %}
-            <a class="navbar-brand" href="/logout">{{ current_user.login }}</a>
+            <a class="navbar-brand" href="/main">ТимкаРазвод</a>
+          {% else %}
+            <a class="navbar-brand" href="/">ТимкаРазвод</a>
+          {% endif %}
+          {% if current_user.is_authenticated %}
+            <a class="navbar-brand" href="/profile">{{ current_user.login }}</a>
           {% else %}
           <p>
               <a class="btn btn-primary" href="/reg">Регистрация</a>
