--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,15 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
       <title>Главная страница</title>
+      <style>
+          header {
+            margin-left: 0px;
+          }
+      </style>
   </head>
   <body>
     <header>
-      <nav class="navbar bg-dark" data-bs-theme="dark">
+      <nav class="navbar bg-light" data-bs-theme="light">
         <a class="navbar-brand" href="#">ТимкаРазвод</a>
           {% if current_user.is_authenticated %}
             <a class="navbar-brand" href="/logout">{{ current_user.login }}</a>
@@ -19,6 +24,14 @@
           </p>
           {% endif %}
       </nav>
+        <div>
+            <nav class="navbar bg-dark" data-bs-theme="dark">
+          <p>
+              <a class="btn btn-primary">Помощь</a>
+              <a class="btn btn-success">TG-Бот</a>
+          </p>
+      </nav>
+        </div>
     </header>
   <!-- Begin page content -->
   <main role="main" class="container">
