Add Profile and Some Things

--- a/templates/log.html
+++ b/templates/log.html
@@ -29,5 +29,6 @@
             {{ form.submit(type="submit", class="btn btn-primary") }}
         </p>
         <div>{{ message }}</div>
+        <a href="/">Вернуться назад</a>
     </form>
 {% endblock %}
