--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,5 +3,11 @@
 {% block content %}
   <h1>Профиль</h1>
     <h5 style="padding-top: 20px">Ваш никнейм: {{ current_user.login }}</h5>
-    <a href="tasks" class="btn btn-secondary">Добавить задачу</a>
+    <h5 style="padding-top: 20px">Статус админа: {{ current_user.admin }}</h5>
+    <h5 style="padding-top: 20px">Дата создания: {{ current_user.created_date }}</h5>
+    <a href="/logout" class="btn btn-secondary">Выйти из профиля</a>
+    <a href="/link_to_a_bot" class="btn btn-secondary">Привязка бота</a>
+    {% if current_user.admin %}
+      <a href="/give_admin" class="btn btn-secondary">Выдача админ-прав</a>
+    {% endif %}
 {% endblock %}
